# exact-byte-synth

./: .gitignore  ALGORITHM.md  README.md
archive/python_reference/: benchmark_runner.py  benchmarks.py  codegen.py  demo_build.py  dsl.py  oracle.py  search.py  verify.py
bench/: compare.py  keep_awake.ps1  run_baseline.py
cpp_port/: CMakeLists.txt  build.ps1
cpp_port/apps/: synth_benchmark.cpp  synth_codegen.cpp  synth_demo_build.cpp  synth_search.cpp  synth_verify.cpp
cpp_port/include/synth/: core.hpp
cpp_port/src/: benchmarks.cpp  core.cpp  current_oracle.cpp
cpp_port/tests/: synth_tests.cpp
fpga_demo/: board.qsf  exact-byte-synth.qsf  hex_to_7seg.sv  top.sv
